--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header><img src="img\Digital_rain_animation_small_letters_clear.gif" alt="logo"></header>
+    <header><img id ="matrix" src="img\Digital_rain_animation_small_letters_clear.gif" alt="logo"></header>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,12 +22,12 @@
         <h1>Alan Gonzalo Dones</h1>
         <h2>Tecnico Universitario en Programacion UTN </h2>
         <h3>Tecnologias</h3>
-        <img src="img\html.png" alt="png-html">
-        <img src="img\css.png" alt="png-css">
-        <img src="img\js.png" alt="png-js">
-        <img src="img\php.png" alt="png-php">
-        <img src="img\sql.png" alt="png-sql">
-        <img src="img\c.png" alt="png-c#">        
+        <img id="HTML" src="img\html.png" alt="png-html">
+        <img id="CSS" src="img\css.png" alt="png-css">
+        <img id="JS" src="img\js.png" alt="png-js">
+        <img id="PHP" src="img\php.png" alt="png-php">
+        <img id="SQL" src="img\sql.png" alt="png-sql">
+        <img id="C#" src="img\c.png" alt="png-c#">        
 
         <p>Soy Alan Gonzalo Dones, desarrollador de software con experiencia en C#, .NET, SQL, PL/SQL y modelado de datos.
         Actualmente curso la Tecnicatura Universitaria en Programación en la UTN y cuento con certificación en Bases de Datos avalada por Oracle y la UTN.
