contenedor de las tecnologias creado
se creo contenedor flex para las tecnologias y se agrego colo para que no haya "camino de la rivera vibes"

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         <h1>Alan Gonzalo Dones</h1>
         <h2>Tecnico Universitario en Programacion UTN </h2>
         <h3>Tecnologias</h3>
-        <img id="HTML" src="img\html.png" alt="png-html">
-        <img id="CSS" src="img\css.png" alt="png-css">
-        <img id="JS" src="img\js.png" alt="png-js">
-        <img id="PHP" src="img\php.png" alt="png-php">
-        <img id="SQL" src="img\sql.png" alt="png-sql">
-        <img id="C#" src="img\c.png" alt="png-c#">        
-
+        <div class="imagenes-tecnologias">
+            <img id="HTML" src="img\html.png" alt="png-html">
+            <img id="CSS" src="img\css.png" alt="png-css">
+            <img id="JS" src="img\js.png" alt="png-js">
+            <img id="PHP" src="img\php.png" alt="png-php">
+            <img id="SQL" src="img\sql.png" alt="png-sql">
+            <img id="C#" src="img\c.png" alt="png-c#">        
+        </div>
         <p>Soy Alan Gonzalo Dones, desarrollador de software con experiencia en C#, .NET, SQL, PL/SQL y modelado de datos.
         Actualmente curso la Tecnicatura Universitaria en Programación en la UTN y cuento con certificación en Bases de Datos avalada por Oracle y la UTN.
 
